@@ -22,6 +22,7 @@ August ? 2020 [Hróðvitnir]
       "sl:walkabout shadow" alias to "sl:walkabout shadow component"
     * "get scancode name" works for joy: scancodes too [Ralph]
     * "expand strings in slices" [James]
+    * "hero is chasing" and "npc is chasing" [James]
 
   *** Changes
 
